# ivory-chain/Cargo.toml

[workspace]
resolver = "2"
members = [
    # Core crates
    "crates/ivory-primitives",
    "crates/ivory-crypto",
    "crates/ivory-core",
    "crates/ivory-state",
    "crates/ivory-executor",
    "crates/ivory-consensus",
    "crates/ivory-chain",
    "crates/ivory-network",
    "crates/ivory-txpool",
    "crates/ivory-storage",
    "crates/ivory-rpc",
    "crates/ivory-vm",
    
    # Binaries
    "bin/ivory",
    
    # Tools
    "tools/ivory-cli",
    "tools/ivory-keygen",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourname/ivory-chain"
authors = ["Your Name <you@example.com>"]
keywords = ["blockchain", "cryptocurrency", "distributed-ledger"]
categories = ["cryptography", "network-programming"]

[workspace.dependencies]
# ═══════════════════════════════════════════════════════════════════════════
# Internal crates
# ═══════════════════════════════════════════════════════════════════════════
ivory-primitives = { path = "crates/ivory-primitives" }
ivory-crypto = { path = "crates/ivory-crypto" }
ivory-core = { path = "crates/ivory-core" }
ivory-state = { path = "crates/ivory-state" }
ivory-executor = { path = "crates/ivory-executor" }
ivory-consensus = { path = "crates/ivory-consensus" }
ivory-chain = { path = "crates/ivory-chain" }
ivory-network = { path = "crates/ivory-network" }
ivory-txpool = { path = "crates/ivory-txpool" }
ivory-storage = { path = "crates/ivory-storage" }
ivory-rpc = { path = "crates/ivory-rpc" }
ivory-vm = { path = "crates/ivory-vm" }

# ═══════════════════════════════════════════════════════════════════════════
# Serialization
# ═══════════════════════════════════════════════════════════════════════════
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# ═══════════════════════════════════════════════════════════════════════════
# Cryptography
# ═══════════════════════════════════════════════════════════════════════════
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
sha3 = "0.10"

# ═══════════════════════════════════════════════════════════════════════════
# Async Runtime
# ═══════════════════════════════════════════════════════════════════════════
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# ═══════════════════════════════════════════════════════════════════════════
# Networking - P2P
# ═══════════════════════════════════════════════════════════════════════════
libp2p = { version = "0.53", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "ping",
    "mdns",
    "serde",
    "macros",
] }

# ═══════════════════════════════════════════════════════════════════════════
# HTTP/RPC - Using Axum
# ═══════════════════════════════════════════════════════════════════════════
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = "0.1"

# gRPC (NOT optional here - optional is set in individual crates)
tonic = "0.11"
prost = "0.12"

# ═══════════════════════════════════════════════════════════════════════════
# Storage
# ═══════════════════════════════════════════════════════════════════════════
rocksdb = { version = "0.22", features = ["multi-threaded-cf"] }

# ═══════════════════════════════════════════════════════════════════════════
# Logging & Tracing
# ═══════════════════════════════════════════════════════════════════════════
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# ═══════════════════════════════════════════════════════════════════════════
# Error Handling
# ═══════════════════════════════════════════════════════════════════════════
thiserror = "1.0"
anyhow = "1.0"

# ═══════════════════════════════════════════════════════════════════════════
# Utilities
# ═══════════════════════════════════════════════════════════════════════════
hex = "0.4"
bytes = "1.5"
parking_lot = "0.12"
dashmap = "5.5"
smallvec = { version = "1.11", features = ["serde"] }
derive_more = "0.99"
cfg-if = "1.0"
once_cell = "1.19"
arc-swap = "1.6"
num_cpus = "1.16"
itertools = "0.12"

# ═══════════════════════════════════════════════════════════════════════════
# Time
# ═══════════════════════════════════════════════════════════════════════════
chrono = { version = "0.4", features = ["serde"] }

# ═══════════════════════════════════════════════════════════════════════════
# CLI
# ═══════════════════════════════════════════════════════════════════════════
clap = { version = "4.4", features = ["derive", "env"] }

# ═══════════════════════════════════════════════════════════════════════════
# Configuration
# ═══════════════════════════════════════════════════════════════════════════
config = "0.14"
toml = "0.8"
dirs = "5.0"

# ═══════════════════════════════════════════════════════════════════════════
# Testing
# ═══════════════════════════════════════════════════════════════════════════
criterion = "0.5"
proptest = "1.4"
test-log = { version = "0.2", features = ["trace"] }
tempfile = "3.9"
pretty_assertions = "1.4"

# ═══════════════════════════════════════════════════════════════════════════
# Build Profiles
# ═══════════════════════════════════════════════════════════════════════════

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2

[profile.test]
opt-level = 1
debug = true

[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false