# crates/ivory-chain/Cargo.toml
[package]
name = "ivory-chain"
version.workspace = true
edition.workspace = true

[dependencies]
ivory-primitives = { workspace = true }
ivory-core = { workspace = true }
ivory-state = { workspace = true }
ivory-executor = { workspace = true }
ivory-consensus = { workspace = true }
ivory-storage = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }