# crates/ivory-network/Cargo.toml
[package]
name = "ivory-network"
version.workspace = true
edition.workspace = true

[dependencies]
ivory-primitives = { workspace = true }
ivory-core = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }